--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -716,8 +716,8 @@
     <string name="accelerometer_summary_off" product="default" msgid="5485489363715740761">"Tájolás automatikus váltása a telefon elfordításakor"</string>
     <string name="brightness" msgid="2354961343555249270">"Fényerő"</string>
     <string name="brightness_summary" msgid="838917350127550703">"A képernyő fényerejének beállítása"</string>
-    <string name="screen_timeout" msgid="4351334843529712571">"Alvó mód"</string>
-    <string name="screen_timeout_summary" msgid="327761329263064327">"<xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> inaktivitás után"</string>
+    <string name="screen_timeout" msgid="4351334843529712571">"Képernyő elsötétedése"</string>
+    <string name="screen_timeout_summary" msgid="327761329263064327">"A képernyő automatikus kikapcsolási idejének beállítása"</string>
     <string name="wallpaper_settings_title" msgid="5449180116365824625">"Háttérkép"</string>
     <string name="wallpaper_settings_fragment_title" msgid="519078346877860129">"Válasszon tapétát innen:"</string>
     <string name="screensaver_settings_title" msgid="3349790120327233241">"Álmodozás"</string>
@@ -1832,4 +1832,7 @@
     <string name="user_picture_title" msgid="7297782792000291692">"Fotóazonosító"</string>
     <string name="cell_broadcast_settings" msgid="8415582011920085222">"Cellán belüli adások"</string>
     <string name="cell_broadcast_settings_summary" msgid="3301339398950905913">"Válassza ki a megjelenítendő vészriasztások típusait."</string>
+    <string name="key_map_options">Key mapping lehetőségek</string>
+    <string name="wakeup_brightness">felébred</string>
+    <string name="wakeup_brightness_summary">Nyissa ki az első fény, amikor felébredek rendszer</string>
 </resources>
