--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1752,8 +1752,6 @@
     <string name="search_settings_summary">Manage search settings and history</string>
 
     <!-- Display settings --><skip/>
-    <!-- Sound & display settings screen, section header for settings related to display -->
-    <string name="display_settings">Display</string>
     <!-- Sound & display settings screen, accelerometer-based rotation check box label -->
     <string name="accelerometer_title">Auto-rotate screen</string>
     <!-- Sound & display settings screen, accelerometer-based rotation summary text when check box is selected -->
@@ -4457,6 +4455,32 @@
     <string name="set_resolution_failed_message">Failed to change display mode.</string>
     <string name="dlg_confirm_reboot_title">Reboot</string>
     <string name="dlg_confirm_reboot_text">System will reboot to change display mode.</string>
+    <string name="shutdown_delay">Shutdown</string>
+    <string name="norwayapp_settings">All apps</string>
+    <string name="font_setting">Font management</string>
+    <string name="setfont_summary">Set the system font</string>
+    <string name="current_font">Current</string>
+    <string name="systemupdate">System update</string>
+    <string name="font_preview">Preview:</string>
+    <string name="after_replace">Replace</string>
+    <string name="display_font_text">"Aa Bb Cc Dd Ee Ff\n\n1 2 3 4 5 6 7\n\n+-=*%#@,.$\n\n欣博阅 电纸书"</string>
+    <string name="font_tip_message">"This will set the system Chinese and English font, device will restart after the completion of!\nDo you want to continue, OK?"</string>
+    <string name="font_set_error">Font settings failed</string>
+    <string name="font_default">System default</string>
+    <string name="statusbar_setting">Statusbar</string>
+    <string name="statusbar_summary_on">Show</string>
+    <string name="statusbar_summary_off">Hide</string>
+    <string name="display_settings">User defined</string>
+    <string name="setlauncher_app">Customize the desktop apps</string>
+    <string name="volume_buttons_setting">Volume keys settings</string>
+    <string name="volume_buttons_on">on</string>
+    <string name="volume_buttons_off">off</string>
+    <string name="a2_flush_setting">A2 flush setting</string>
+    <string name="pic_recover">Restore default Settings</string>
+    <string name="fullscreen_flush">Fullscreen flush times</string>
+    <string name="open_epub_setting">Set the EPUB book reader</string>
+    <string name="open_epub_withPDF">Use Adobe reader</string>
+    <string name="open_epub_withFB2">Use FB2 reader</string>
     <string name="wifi_setup_provision_prev">prev</string>
     <string name="wifi_setup_provision_skip">skip</string>
     <string name="wifi_setup_provision_next">next</string>
